--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,7 +11,7 @@ jobs:
     - self-hosted
     - updater
       # unique label for runner created specifically for this job
-      # "updater" here is the name of the job
+      # "update" here is the name of the job
     - ${{github.run_id}}-${{github.run_attempt}}-update
 
     steps:
@@ -20,19 +20,27 @@ jobs:
         fetch-depth: 0
 
     - name: Save image name
-      run: echo "image=orca:$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      run: echo "image=orca" >> $GITHUB_ENV
+
+    - name: Save image tag
+      run: echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
     - name: Build image
-      run: DOCKER_BUILDKIT=1 docker build -t ${{ env.image }} .
+      run: docker build -t ${{ env.image }}:${{ env.tag }} .
       env:
-        # work around https://github.com/github/vscode-github-actions/issues/222. it's annoying.
+        # work around https://github.com/github/vscode-github-actions/issues/222.
         image: ${{ env.image }}
+        tag: ${{ env.tag }}
 
-    - name: Update service
-      run: docker service update orca --image ${{ env.image }} --update-failure-action rollback --rollback-failure-action continue | tee /tmp/capture.out
+    - name: Run update
+      run: >
+        docker run --rm
+        --name "nomad-update-${{ env.image }}-${{ env.tag }}-${{ github.run_id }}-${{ github.run_attempt }}"
+        --add-host "server.global.nomad=host-gateway"
+        --env NOMAD_ADDR="https://server.global.nomad:4646"
+        --env NOMAD_TOKEN="${{ secrets.NOMAD_TOKEN }}"
+        nomad-update:latest ${{ env.image }} ${{ env.image }} ${{ env.tag }}
       env:
-        # work around https://github.com/github/vscode-github-actions/issues/222. it's annoying.
+        # work around https://github.com/github/vscode-github-actions/issues/222.
         image: ${{ env.image }}
-
-    - name: Exit if rollback happened
-      run: if [ "$(cat /tmp/capture.out | grep -c '^rollback:')" -ge 1 ]; then echo 'Rollback occurred'; exit 1; fi
+        tag: ${{ env.tag }}
